updated workflow to use proxy server
imp

--- a/source/info.plist
+++ b/source/info.plist
@@ -43,8 +43,7 @@
 				<string>from ph import get_items
 
 uri = 'https://api.producthunt.com/v1/posts'
-access_token = '143499ff27e4bbfcd3ada84540a4991753290d2fb3e642f806af489a4803c13d'
-print(get_items(uri, access_token, "{query}"))</string>
+print(get_items(uri, "{query}"))</string>
 				<key>subtext</key>
 				<string>List Product Hunt today's hunt</string>
 				<key>title</key>
