--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "morgan": "^1.5.1",
     "request": "^2.51.0"
   },
   "devDependencies": {},
